[tool.poetry]
name = "sc-audit"
version = "0.10.5"
description = "Stellarcarbon database with monitoring and audit functionality"
authors = ["Alex Olieman <alex@olieman.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.stellarcarbon.io/"
repository = "https://github.com/stellarcarbon/sc-audit"
packages = [{include = "sc_audit"}]

[tool.poetry.dependencies]
python = "^3.12"
Cython = "^3.0.10"
SQLAlchemy = "^2.0.31"
httpx = "^0.28.1"
parsel = "^1.9.1"
stellar-sdk = ">=10"
pandas = "^2.2.2"
alembic = "^1.13.2"
click = "^8.1.7"
pygithub = "^2.6.1"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
sc-audit = 'sc_audit.cli:cli'

[tool.coverage.run]
source = ["sc_audit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
