[tool.poetry]
name = "sc-audit"
version = "0.12.0"
description = "Stellarcarbon database with monitoring and audit functionality"
authors = ["Alex Olieman <alex@olieman.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.stellarcarbon.io/"
repository = "https://github.com/stellarcarbon/sc-audit"
packages = [{include = "sc_audit"}]

[tool.poetry.dependencies]
python = "^3.12"
Cython = "^3.1.3"
SQLAlchemy = "^2.0.43"
httpx = "^0.28.1"
parsel = "^1.10.0"
stellar-sdk = ">=13.0.0"
pandas = "^2.3.1"
alembic = "^1.16.4"
click = "^8.2.1"
pygithub = "^2.7.0"
pydantic-settings = "^2.10.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
sc-audit = 'sc_audit.cli:cli'

[tool.coverage.run]
source = ["sc_audit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
